force-app/main/default/objects/ExternalProgramSales__c/ExternalProgramSales__c.object-meta.xml
<CustomObject>
    <label>External Program Sales</label>
    <nameField>
        <label>External Program Sales</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Program Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>