force-app/main/default/objects/ExternalProgramSales__c/fields/ActivatedDate__c.field-meta.xml
<CustomField>
    <fullName>ActivatedDate__c</fullName>
    <label>ActivatedDate</label>
    <type>Date</type>
</CustomField>