force-app/main/default/objects/ExternalProgramSales__c/fields/Activations__c.field-meta.xml
<CustomField>
    <fullName>Activations__c</fullName>
    <label>Activations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>