force-app/main/default/objects/ExternalProgramSales__c/fields/CancelDate__c.field-meta.xml
<CustomField>
    <fullName>CancelDate__c</fullName>
    <label>CancelDate</label>
    <type>Date</type>
</CustomField>