force-app/main/default/objects/ExternalProgramSales__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>