force-app/main/default/objects/ExternalProgramSales__c/fields/Chargebacks__c.field-meta.xml
<CustomField>
    <fullName>Chargebacks__c</fullName>
    <label>Chargebacks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>