force-app/main/default/objects/ExternalProgramSales__c/fields/CustomerCity__c.field-meta.xml
<CustomField>
    <fullName>CustomerCity__c</fullName>
    <label>CustomerCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>