force-app/main/default/objects/ExternalProgramSales__c/fields/CustomerState__c.field-meta.xml
<CustomField>
    <fullName>CustomerState__c</fullName>
    <label>CustomerState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>