force-app/main/default/objects/ExternalProgramSales__c/fields/CustomerZip__c.field-meta.xml
<CustomField>
    <fullName>CustomerZip__c</fullName>
    <label>CustomerZip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>