force-app/main/default/objects/ExternalProgramSales__c/fields/DaysToActivate__c.field-meta.xml
<CustomField>
    <fullName>DaysToActivate__c</fullName>
    <label>DaysToActivate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>