force-app/main/default/objects/ExternalProgramSales__c/fields/DealersMovedToDSI__c.field-meta.xml
<CustomField>
    <fullName>DealersMovedToDSI__c</fullName>
    <label>DealersMovedToDSI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>