force-app/main/default/objects/ExternalProgramSales__c/fields/DisconnectDate__c.field-meta.xml
<CustomField>
    <fullName>DisconnectDate__c</fullName>
    <label>DisconnectDate</label>
    <type>Date</type>
</CustomField>