force-app/main/default/objects/ExternalProgramSales__c/fields/FrontierSecure__c.field-meta.xml
<CustomField>
    <fullName>FrontierSecure__c</fullName>
    <label>FrontierSecure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>