force-app/main/default/objects/ExternalProgramSales__c/fields/InternetSpeed__c.field-meta.xml
<CustomField>
    <fullName>InternetSpeed__c</fullName>
    <label>InternetSpeed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>