force-app/main/default/objects/ExternalProgramSales__c/fields/InternetSpeedCategory__c.field-meta.xml
<CustomField>
    <fullName>InternetSpeedCategory__c</fullName>
    <label>InternetSpeedCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>