force-app/main/default/objects/ExternalProgramSales__c/fields/InvoiceAccount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAccount__c</fullName>
    <label>InvoiceAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>