force-app/main/default/objects/ExternalProgramSales__c/fields/MDP__c.field-meta.xml
<CustomField>
    <fullName>MDP__c</fullName>
    <label>MDP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>