force-app/main/default/objects/ExternalProgramSales__c/fields/MDP_Type__c.field-meta.xml
<CustomField>
    <fullName>MDP_Type__c</fullName>
    <label>MDP Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>