force-app/main/default/objects/ExternalProgramSales__c/fields/MobilityLineNumber__c.field-meta.xml
<CustomField>
    <fullName>MobilityLineNumber__c</fullName>
    <label>MobilityLineNumber</label>
    <type>Phone</type>
</CustomField>