force-app/main/default/objects/ExternalProgramSales__c/fields/NMGDealers__c.field-meta.xml
<CustomField>
    <fullName>NMGDealers__c</fullName>
    <label>NMGDealers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>