force-app/main/default/objects/ExternalProgramSales__c/fields/PartnerOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PartnerOrderNumber__c</fullName>
    <label>PartnerOrderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>