force-app/main/default/objects/ExternalProgramSales__c/fields/PVAccountName__c.field-meta.xml
<CustomField>
    <fullName>PVAccountName__c</fullName>
    <label>PVAccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>