force-app/main/default/objects/ExternalProgramSales__c/fields/SalesEntrySystem__c.field-meta.xml
<CustomField>
    <fullName>SalesEntrySystem__c</fullName>
    <label>SalesEntrySystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>