force-app/main/default/objects/ExternalProgramSales__c/fields/WorkOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderNumber__c</fullName>
    <label>WorkOrderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>