force-app/main/default/objects/ExternalProgramSales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SaleDate__c</columns>
    <columns>ActivatedDate__c</columns>
    <columns>CancelDate__c</columns>
    <columns>DisconnectDate__c</columns>
    <columns>FrontierSecure__c</columns>
    <columns>Sales__c</columns>
    <columns>Activations__c</columns>
    <columns>Chargebacks__c</columns>
    <columns>DaysToActivate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>